tests/ui/consts/const_let_assign3.stderr
error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/const_let_assign3.rs:6:18
   |
LL |     const fn foo(&mut self, x: u32) {
   |                  ^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:14:5
   |
LL |     s.foo(3);
   |     ^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0658]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:20:13
   |
LL |     let y = &mut x;
   |             ^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
